--- a/translations/ru.json
+++ b/translations/ru.json
@@ -41,6 +41,16 @@
             "placeholder":{
                 "search": "поиск"
             },
+            "option":{
+                "cleaning": "очистка",
+                "list": "услуг(и)",
+                "polishing": "полировка",
+                "washing": "мойка",
+                "name A - Z": "имя А - Я",
+                "name Z - A": "имя Я - А",
+                "price 1 - 9": "цена 1 - 9",
+                "price 9 - 1": "цена 9 - 1"
+            },
             "pasting":{
                 "1": {
                     "name":"обработка коррозии",
@@ -204,7 +214,9 @@
                 "language": "язык",
                 "palette": "палитра",
                 "version": "версия для слабовидящих",
-                "image": "отключить изображения"
+                "image": "отключить изображения",
+                "english": "английский",
+                "russian": "русский"
             },
             "placeholder":{
                 "old": "старый пароль",
