--- a/translations/ru.json
+++ b/translations/ru.json
@@ -216,7 +216,9 @@
                 "version": "версия для слабовидящих",
                 "image": "отключить изображения",
                 "english": "английский",
-                "russian": "русский"
+                "russian": "русский",
+                "dark": "темная",
+                "light": "светлая"
             },
             "placeholder":{
                 "old": "старый пароль",
