feat: add api for services

--- a/translations/ru.json
+++ b/translations/ru.json
@@ -27,6 +27,7 @@
             "textButtonMoreDetailed": "Подробнее",
             "textButtonRefuse": "Отказ",
             "textButtonChange": "Менять",
+            "textButtonDone": "Сделать",
             "header":{
                 "textOur":"Наши услуги",
                 "textOrder": "Заказанные услуги",
@@ -53,57 +54,53 @@
                 "price 1 - 9": "цена 1 - 9",
                 "price 9 - 1": "цена 9 - 1"
             },
-            "pasting":{
-                "1": {
-                    "name":"обработка коррозии",
-                    "description":"мы очищаем поверхность, удаляем старые покрытия и наносим специальные антикоррозийные составы"
-                },
-                "2": {
-                    "name":"ламинирование кузова",
-                    "description":"Эта услуга помогает сохранить оригинальный цвет и блеск кузова, а также облегчает уход за автомобилем"
-                },
-                "3": {
-                    "name":"покраска кузова",
-                    "description":"Используя только высококачественные краски и современные технологии, идеальное покрытие"
-                },
-                "4": {
-                    "name":"покраска деталей",
-                    "description":"Позволяет восстановить или изменить цвет элементов вашего автомобиля, таких как бамперы, двери или капоты"
-                },
-                "5": {
-                    "name":"покраска дисков",
-                    "description":"Покраска как стальных, так и легкосплавных дисков, используя специальные краски, которые обеспечивают защиту от коррозии"
-                },
-                "6": {
-                    "name":"защитный лак",
-                    "description":"Защитный лак создает прочный барьер, защищая автомобиль от химических веществ и механических повреждений"
-                }
+            "1": {
+                "name":"обработка коррозии",
+                "description":"мы очищаем поверхность, удаляем старые покрытия и наносим специальные антикоррозийные составы"
             },
-            "detailing":{
-                "1": {
-                    "name":"полировка фар",
-                    "description":"Специальные составы и инструменты, чтобы вернуть фарам их первоначальный вид, улучшая видимость на дороге"
-                },
-                "2": {
-                    "name":"полировка кузова",
-                    "description":"Высококачественные полировочные пасты и оборудование, чтобы вернуть автомобилю блеск и глубину цвета"
-                },
-                "3": {
-                    "name":"керамическое покрытие",
-                    "description":"Нанесение керамического покрытия защищает от химических веществ и механических повреждений"
-                },
-                "4": {
-                    "name":"химчистка интерьера",
-                    "description":"Мы очищаем обивку, коврики, панели и другие элементы, используя профессиональные средства и оборудование"
-                },
-                "5": {
-                    "name":"удаление вмятин",
-                    "description":"Специальные технологии и инструменты для аккуратного устранения вмятин, что позволяет сохранить оригинальное покрытие"
-                },
-                "6": {
-                    "name":"защитная пленка",
-                    "description":" Пленка образует прочный барьер, который сохраняет оригинальный цвет и блеск кузова, а также облегчает уход за автомобилем"
-                }
+            "2": {
+                "name":"ламинирование кузова",
+                "description":"Эта услуга помогает сохранить оригинальный цвет и блеск кузова, а также облегчает уход за автомобилем"
+            },
+            "3": {
+                "name":"покраска кузова",
+                "description":"Используя только высококачественные краски и современные технологии, идеальное покрытие"
+            },
+            "4": {
+                "name":"покраска деталей",
+                "description":"Позволяет восстановить или изменить цвет элементов вашего автомобиля, таких как бамперы, двери или капоты"
+            },
+            "5": {
+                "name":"покраска дисков",
+                "description":"Покраска как стальных, так и легкосплавных дисков, используя специальные краски, которые обеспечивают защиту от коррозии"
+            },
+            "6": {
+                "name":"защитный лак",
+                "description":"Защитный лак создает прочный барьер, защищая автомобиль от химических веществ и механических повреждений"
+            },
+            "7": {
+                "name":"полировка фар",
+                "description":"Специальные составы и инструменты, чтобы вернуть фарам их первоначальный вид, улучшая видимость на дороге"
+            },
+            "8": {
+                "name":"полировка кузова",
+                "description":"Высококачественные полировочные пасты и оборудование, чтобы вернуть автомобилю блеск и глубину цвета"
+            },
+            "9": {
+                "name":"керамическое покрытие",
+                "description":"Нанесение керамического покрытия защищает от химических веществ и механических повреждений"
+            },
+            "10": {
+                "name":"химчистка интерьера",
+                "description":"Мы очищаем обивку, коврики, панели и другие элементы, используя профессиональные средства и оборудование"
+            },
+            "11": {
+                "name":"удаление вмятин",
+                "description":"Специальные технологии и инструменты для аккуратного устранения вмятин, что позволяет сохранить оригинальное покрытие"
+            },
+            "12": {
+                "name":"защитная пленка",
+                "description":" Пленка образует прочный барьер, который сохраняет оригинальный цвет и блеск кузова, а также облегчает уход за автомобилем"
             }
         },
         "question":{
