--- a/translations/en.json
+++ b/translations/en.json
@@ -27,6 +27,7 @@
             "textButtonMoreDetailed": "More detailed",
             "textButtonRefuse": "Refuse",
             "textButtonChange": "Change",
+            "textButtonDone": "Done",
             "header":{
                 "textOur":"our services",
                 "textOrder": "ordered services",
@@ -53,57 +54,53 @@
                 "price 1 - 9": "price 1 - 9",
                 "price 9 - 1": "price 9 - 1"
             },
-            "pasting":{
-                "1": {
-                    "name":"corrosion treatment",
-                    "description":"We clean the surface, remove old coatings, and apply special anti-corrosion compounds"
-                },
-                "2": {
-                    "name":"lamination of the body",
-                    "description":"This service helps to preserve the original color and shine of the body, as well as makes car maintenance easier"
-                },
-                "3": {
-                    "name":"body painting",
-                    "description":"Using only high-quality paints and modern technologies, we guarantee perfect coverage, resistance to fading, and durability"
-                },
-                "4": {
-                    "name":"painting parts",
-                    "description":"It allows you to restore or change the color of individual elements of your car, such as bumpers, doors, or hoods"
-                },
-                "5": {
-                    "name":"painting discs",
-                    "description":"We offer painting of both steel and alloy wheels using special paints that provide protection against corrosion and mechanical damage"
-                },
-                "6": {
-                    "name":"protective varnish",
-                    "description":"The protective varnish creates a strong barrier, protecting the car from chemicals and mechanical damage"
-                }
+            "1": {
+                "name":"corrosion treatment",
+                "description":"We clean the surface, remove old coatings, and apply special anti-corrosion compounds"
             },
-            "detailing":{
-                "1": {
-                    "name":"headlight polishing",
-                    "description":"Special formulations and tools to restore the headlights to their original appearance, improving visibility on the road"
-                },
-                "2": {
-                    "name":"body polishing",
-                    "description":"We use high-quality polishing pastes and equipment to restore the car's charming shine and depth of color"
-                },
-                "3": {
-                    "name":"ceramic coating",
-                    "description":"Applying a ceramic coating protects against chemicals and mechanical damage, and makes it easier to maintain your vehicle"
-                },
-                "4": {
-                    "name":"interior dry cleaning",
-                    "description":"We clean upholstery, rugs, panels, and other elements using professional products and equipment"
-                },
-                "5": {
-                    "name":"dents removal",
-                    "description":"Special technologies and tools for carefully removing dents, which allows you to preserve the original coating"
-                },
-                "6": {
-                    "name":"protective film",
-                    "description":"The film forms a durable barrier that preserves the original color and shine of the body, making it easier to maintain the vehicle"
-                }
+            "2": {
+                "name":"lamination of the body",
+                "description":"This service helps to preserve the original color and shine of the body, as well as makes car maintenance easier"
+            },
+            "3": {
+                "name":"body painting",
+                "description":"Using only high-quality paints and modern technologies, we guarantee perfect coverage, resistance to fading, and durability"
+            },
+            "4": {
+                "name":"painting parts",
+                "description":"It allows you to restore or change the color of individual elements of your car, such as bumpers, doors, or hoods"
+            },
+            "5": {
+                "name":"painting discs",
+                "description":"We offer painting of both steel and alloy wheels using special paints that provide protection against corrosion and mechanical damage"
+            },
+            "6": {
+                "name":"protective varnish",
+                "description":"The protective varnish creates a strong barrier, protecting the car from chemicals and mechanical damage"
+            },
+            "7": {
+                "name":"headlight polishing",
+                "description":"Special formulations and tools to restore the headlights to their original appearance, improving visibility on the road"
+            },
+            "8": {
+                "name":"body polishing",
+                "description":"We use high-quality polishing pastes and equipment to restore the car's charming shine and depth of color"
+            },
+            "9": {
+                "name":"ceramic coating",
+                "description":"Applying a ceramic coating protects against chemicals and mechanical damage, and makes it easier to maintain your vehicle"
+            },
+            "10": {
+                "name":"interior dry cleaning",
+                "description":"We clean upholstery, rugs, panels, and other elements using professional products and equipment"
+            },
+            "11": {
+                "name":"dents removal",
+                "description":"Special technologies and tools for carefully removing dents, which allows you to preserve the original coating"
+            },
+            "12": {
+                "name":"protective film",
+                "description":"The film forms a durable barrier that preserves the original color and shine of the body, making it easier to maintain the vehicle"
             }
         },
         "question":{
