fix: fix link & i18n on page home

--- a/translations/ru.json
+++ b/translations/ru.json
@@ -23,7 +23,7 @@
             }
         },
         "services":{
-            "textButtonOrder": "Заказать",
+            "textButtonOrder": "Заказ",
             "textButtonMoreDetailed": "Подробнее",
             "textButtonRefuse": "Отказ",
             "textButtonChange": "Менять",
