--- a/translations/ru.json
+++ b/translations/ru.json
@@ -23,6 +23,7 @@
             }
         },
         "services":{
+            "noServiceText": "На данный момент никакие услуги не доступны.",
             "textButtonOrder": "Заказ",
             "textButtonMoreDetailed": "Подробнее",
             "textButtonRefuse": "Отказ",
@@ -154,7 +155,37 @@
     "gallery":{
         "title": "Галлерея",
         "feedback":{
-            "header": "отзывы наших клиентов"
+            "header": "отзывы наших клиентов",
+            "1": {
+                "name": "Мария Иванова",
+                "service": "Обработка от коррозии",
+                "description": "Отличная услуга! После обработки кузов выглядит как новый, и я больше не беспокоюсь о коррозии."
+            },
+            "2": {
+                "name": "Алексей Петров",
+                "service": "Ламинирование кузова",
+                "description": "Ламинирование действительно помогло сохранить цвет и блеск. Я очень доволен результатом!"
+            },
+            "3": {
+                "name": "Ольга Смирнова",
+                "service": "Покраска кузова",
+                "description": "Покраска выполнена на высшем уровне! Цвет идеально совпадает, и покрытие очень стойкое."
+            },
+            "4": {
+                "name": "Дмитрий Николаев",
+                "service": "Покраска деталей",
+                "description": "Восстановили цвет бамперов, и теперь они выглядят как новые. Очень рекомендую!"
+            },
+            "5": {
+                "name": "Анна Петрова",
+                "service": "Покраска дисков",
+                "description": "Покраска дисков выполнена профессионально; теперь они защищены от коррозии и выглядят стильно."
+            },
+            "6": {
+                "name": "Иван Сидоров",
+                "service": "Защитный лак",
+                "description": "Защитный лак действительно работает! Мой автомобиль теперь защищен от химических веществ и повреждений."
+            }
         },
         "request-service":{
             "textUp": "Вы хотите такого же результата? Отправьте запрос!",
