--- a/translations/ru.json
+++ b/translations/ru.json
@@ -22,6 +22,17 @@
                 "FAQ": "ЧЗВ"
             }
         },
+        "modal":{
+            "title":{
+                "errorQuestion": "Ошибка вопроса"
+            },
+            "description":{
+                "logInPost": "Войдите в систему, чтобы задать вопрос"
+            },
+            "func":{
+                "confirm": "Подтвердить"
+            }
+        },
         "services":{
             "noServiceText": "На данный момент никакие услуги не доступны.",
             "textButtonOrder": "Заказ",
@@ -236,6 +247,11 @@
                 "telephone": "телефон",
                 "email": "почта",
                 "log": "логин"
+            },
+            "guest":{
+                "logged": "В данный момент вы не авторизованы!\nПожалуйста, авторизуйтесь на сайте, если у вас есть учетная запись. В противном случае зарегистрируйтесь!",
+                "authorization":"Авторизация",
+                "registration":"Регистрация"
             },
             "text":{
                 "change": "изменить пароль",
