--- a/translations/ru.json
+++ b/translations/ru.json
@@ -24,13 +24,30 @@
         },
         "modal":{
             "title":{
-                "errorQuestion": "Ошибка вопроса"
+                "errorQuestion": "Ошибка вопроса",
+                "orderServices": "Заказать услуги",
+                "changePrice": "Изменить цену",
+                "cancelService": "Отменить услугу",
+                "moreDetailed": "Более подробный",
+                "performService": "Выполнить услугу",
+                "deleteQuestion": "Удалить вопро",
+                "addAnswer": "Добавить ответ"
             },
             "description":{
-                "logInPost": "Войдите в систему, чтобы задать вопрос"
+                "logInPost": "Войдите в систему, чтобы задать вопрос",
+                "successAdd":"Вы уже добавили услугу в корзину!",
+                "wantOrder":"Вы действительно хотите заказать услугу?",
+                "needAuth": "Чтобы заказать услугу, вы должны авторизоваться!\n\nпрофиль --> авторизация/регистрация",
+                "cancelService":"Вы действительно хотите отменить услугу?",
+                "moveDone":"Переместить услугу в выполненное?",
+                "deleteQuestion": "Вы действительно хотите удалить вопрос?"
             },
             "func":{
                 "confirm": "Подтвердить"
+            },
+            "placeholder":{
+                "price": "цена",
+                "answer": "ответ"
             }
         },
         "services":{
