--- a/translations/ru.json
+++ b/translations/ru.json
@@ -293,6 +293,11 @@
             "button":{
                 "change": "Изменить",
                 "reset": "Сбросить"
+            },
+            "palette":{
+                "default": "стандарт",
+                "option1": "вариант 1",
+                "option2": "вариант 2"
             }
         }
     },
