--- a/translations/ru.json
+++ b/translations/ru.json
@@ -31,7 +31,8 @@
                 "moreDetailed": "Более подробный",
                 "performService": "Выполнить услугу",
                 "deleteQuestion": "Удалить вопро",
-                "addAnswer": "Добавить ответ"
+                "addAnswer": "Добавить ответ",
+                "setting": "Настройки"
             },
             "description":{
                 "logInPost": "Войдите в систему, чтобы задать вопрос",
@@ -40,7 +41,11 @@
                 "needAuth": "Чтобы заказать услугу, вы должны авторизоваться!\n\nпрофиль --> авторизация/регистрация",
                 "cancelService":"Вы действительно хотите отменить услугу?",
                 "moveDone":"Переместить услугу в выполненное?",
-                "deleteQuestion": "Вы действительно хотите удалить вопрос?"
+                "deleteQuestion": "Вы действительно хотите удалить вопрос?",
+                "wantCustomize": "Если вы хотите настроить страницу",
+                "wantAuth": "Если вы хотите войти в другую учетную запись",
+                "wantRed": "Если вы хотите создать новую учетную запись",
+                "wantLogOut": "Если вы хотите выйти из своей учетной записи"
             },
             "func":{
                 "confirm": "Подтвердить"
@@ -48,6 +53,12 @@
             "placeholder":{
                 "price": "цена",
                 "answer": "ответ"
+            },
+            "link":{
+                "authorization" : "Авторизация",
+                "registration" : "Регистрация",
+                "setting" : "Настройки",
+                "logOut": "Выход"
             }
         },
         "services":{
