--- a/translations/ru.json
+++ b/translations/ru.json
@@ -32,7 +32,10 @@
                 "performService": "Выполнить услугу",
                 "deleteQuestion": "Удалить вопро",
                 "addAnswer": "Добавить ответ",
-                "setting": "Настройки"
+                "setting": "Настройки",
+                "changingPassword": "Изменение пароля",
+                "oldPassword": "Старый пароль не совпадает",
+                "changingPasswordError": "Ошибка! Изменение пароля"
             },
             "description":{
                 "logInPost": "Войдите в систему, чтобы задать вопрос",
@@ -259,6 +262,12 @@
     },
     "profile":{
         "title": "Профиль",
+        "modal": {
+            "succesfully": "Ваш пароль был успешно изменен",
+            "changingPassword": "Изменение пароля",
+            "error": "Ошибка! Изменение пароля",
+            "success" : "Пароль успешно изменен"
+        },
         "personal": {
             "header":{
                 "information": "личная информация",
@@ -314,5 +323,63 @@
     },
     "services":{
         "title": "Услуги"
+    },
+    "authorization":{
+        "title": "Авторизация",
+        "header":{
+            "textOur": "авторизация"
+        },
+        "placeholder":{
+            "login": "логин",
+            "password":"пароль"
+        },
+        "error": {
+            "login": "такого логина нет",
+            "password":"неверный пароль"
+        },
+        "text":{
+            "auth": "Авторизация"
+        }
+    },
+    "registration":{
+        "title": "Регистрация",
+        "header":{
+            "textOur": "регистрация"
+        },
+        "placeholder":{
+            "name": "имя",
+            "surname":"фамилия",
+            "patronymic":"отчество (необязательно)",
+            "telephone":"телефон",
+            "email":"почта",
+            "date":"дата рождения",
+            "login":"логин",
+            "password":"пароль",
+            "repeatThePassword":"повторите пароль"
+        },
+        "error": {
+            "name": "имя содержит 2 - 20 символов",
+            "surname":"фамилия содержит 2 - 20 символов",
+            "patronymic":"не более 20 символов (*необязательное поле)",
+            "telephone":"номер +375 (xx) xxx-xx-xx-xx",
+            "email":"Почта должна содержать от 2 до 30 символов и совпадать...  @gmail.com",
+            "date":"такой даты нет.\nТолько для пользователей старше 16 лет",
+            "busy": "Этот логин занят",
+            "laterLogin": "повторите попытку позже. Введите сами логин",
+            "laterPassword": "повторите попытку позже. Введите сами пароль",
+            "1": "Пароль должен содержать по крайней мере одну строчную букву",
+            "2": "пароль должен содержать по крайней мере одну заглавную букву",
+            "3": "Пароль должен содержать по крайней мере одну цирфу",
+            "4": "Пароль должен содержать по крайней мере один специальную символ",
+            "5" : "Пароль должен содержать 8-20 символов",
+            "6" : "Пароль не должен входить в число 100распространенных паролей из 2023",
+            "noMatch" : "пароли не совпадают"
+        },
+        "text":{
+            "generate": "генерация",
+            "agree": "Соглашение пользователя",
+            "reg": "Регистрация",
+            "success": "Пароль успешно изменен!"
+        }
     }
 }
